Fixed Images Not Showing on Link

--- a/css/ebl.css
+++ b/css/ebl.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
 
   text-align: center;
-  background-image: url("/images/ebl/banner.png");
+  background-image: url("images/ebl/banner.png");
 
   background-size: cover;
   background-position: center;
